tests/success/00-basics/FunSynonym.vix
test : int -> int
test x = addInt 1 x

test2 : int -> int
test2 = test

test3 = printInt (test2 2)
