tests/type-error/CircularGlobal-Lambda.vix
f : int
f = (\x. f) 1
